tests/baselines/reference/conditionalExpressionNewLine4.errors.txt
tests/cases/compiler/conditionalExpressionNewLine4.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine4.ts(1,13): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine4.ts(2,3): error TS2552: Cannot find name 'c'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine4.ts (3 errors) ====
    var v = a ? b : 
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
                ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
      c;
      ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?